Fixed random button alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,6 @@ h1 {
 }
 
 .center {
-    text-align: center;
-    float: center;
+    display: flex;
+    justify-content: center;
 }
